[project]
name = "stomppy"
version = "0.0.1"
authors = [
  { name="Mahomed Issumail", email="mahomedalyissumail@gmail.com" },
]
description = "An implementation of STOMP websocket for python. This implementation is based on the Javascript/Typescript version, then the packages, classes and comments are the same of the JavaScript version available on the repository https://github.com/stomp-js/stompjs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Mahomed2904/stomppy"
Issues = "https://github.com/Mahomed2904/stomppy/issues"